--- a/templates/index.html
+++ b/templates/index.html
@@ -144,23 +144,23 @@
           <ul class="navbar-list">
 
             <li>
-              <a href="{% url 'index'%}" class="navbar-link" data-nav-link>home</a>
+              <a href="{% url 'index'%}" class="navbar-link" data-nav-link>Home</a>
             </li>
 
             <li>
-              <a href="{% url 'about-us'%}" class="navbar-link" data-nav-link>about us</a>
+              <a href="{% url 'about-us'%}" class="navbar-link" data-nav-link>About us</a>
             </li>
 
             <li>
-              <a href="#" class="navbar-link" data-nav-link>destination</a>
+              <a href="{% url 'services'%}" class="navbar-link" data-nav-link>Services</a>
             </li>
 
             <li>
-              <a href="#" class="navbar-link" data-nav-link>packages</a>
+              <a href="#" class="navbar-link" data-nav-link>Aircraft Leasing</a>
             </li>
 
             <li>
-              <a href="#" class="navbar-link" data-nav-link>gallery</a>
+              <a href="#" class="navbar-link" data-nav-link>Air Cargo</a>
             </li>
 
             <li>
