--- a/templates/index.html
+++ b/templates/index.html
@@ -156,7 +156,7 @@
             </li>
 
             <li>
-              <a href="#" class="navbar-link" data-nav-link>Aircraft Leasing</a>
+              <a href="{%  url 'aircraft_leasing'%}" class="navbar-link" data-nav-link>Aircraft Leasing</a>
             </li>
 
             <li>
