--- a/templates/index.html
+++ b/templates/index.html
@@ -160,7 +160,7 @@
             </li>
 
             <li>
-              <a href="#" class="navbar-link" data-nav-link>Air Cargo</a>
+              <a href="{% url 'air_cargo'%}" class="navbar-link" data-nav-link>Air Cargo</a>
             </li>
 
             <li>
