made update on index.html for a contact link

--- a/templates/index.html
+++ b/templates/index.html
@@ -724,7 +724,8 @@
           </div>
 
 
-          <button class="btn btn-secondary">Contact Us !</button>
+          <a href="{% url 'contact-us' %}" class="btn btn-secondary">Contact Us!</a>
+
 
         </div>
       </section>
